# weather_station_backend

./: .clippy.toml  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  config.yml  config.yml.example  create_dev_environment.sh  database.sql  docker-bake.hcl  docker-compose.yml  post_measurement.sh  weather_station_backend.toml
.github/workflows/: build-and-test.yml  build.yml  docker-image.yml
data/: measurements.db
devenv/: telegraf.conf
migrations/2019-06-26-075738_measurements/: up.sql
projects/afluencia/: Cargo.toml
projects/afluencia/src/: lib.rs
projects/weather_station_backend/: Cargo.toml
projects/weather_station_backend/src/: boundary.rs  lib.rs  models.rs  schema.rs  server.rs
projects/weather_station_backend/src/configuration/: mod.rs
projects/weather_station_backend/src/subcommands/: mod.rs
projects/weather_station_backend/src/subcommands/sunrise/: mod.rs
projects/weather_station_backend/src/subcommands/sunset/: mod.rs
src/: boundary.rs  lib.rs  main.rs  models.rs  schema.rs
src/boundary/: mod.rs
src/configuration/: mod.rs
src/routes/: mod.rs
src/routes/sensor/: mod.rs
