[package]
name = "weather_station_backend"
version = "0.4.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"

[[bin]]
name = "weather_station_backend"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4"
fern = "0.6"
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "gzip"] }
rocket = "0.4"
rocket_contrib = {version = "0.4", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
