[package]
name = "weather_station_backend"
version = "0.5.1"
authors = ["Tim Janke <tim+github@janke.biz>"]
edition = "2021"

[[bin]]
name = "weather_station_backend"
path = "src/main.rs"

[dependencies.chrono]
version = "0.4.26"
default-features = false
features = ["std", "clock"]

[dependencies.fern]
version = "0.6.2"
default-features = false

[dependencies.log]
version = "0.4.19"
default-features = false

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["blocking", "gzip"]

[dependencies.rocket]
version = "0.5.0-rc.3"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.164"
features = ["std", "derive"]

[dependencies.serde_json]
version = "1.0.96"
default-features = false
features = ["std"]

[dependencies.serde_yaml]
version = "0.9.21"
default-features = false