[package]
name = "weather_station_backend"
version = "0.6.0"
authors = ["Tim Janke <tim+github@janke.biz>"]
edition = "2021"
repository = "https://github.com/flying7eleven/weather_station_backend"
description = "A quite simple backend to accept data from a weather station and store it in a database."
readme = "README.md"
license = "MIT"
rust-version = "1.60.0"

[[bin]]
name = "weather_station_backend"
path = "src/main.rs"

[dependencies.chrono]
version = "0.4.26"
default-features = false
features = ["std", "clock"]

[dependencies.fern]
version = "0.6.2"
default-features = false

[dependencies.log]
version = "0.4.19"
default-features = false
features = ["kv_unstable_std"]

[dependencies.fenrir-rs]
version = "0.4.1"
default-features = false
features = ["ureq", "json", "structured_logging"]

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["blocking", "gzip"]

[dependencies.rocket]
version = "0.5.0-rc.3"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.164"
features = ["std", "derive"]

[dependencies.serde_json]
version = "1.0.96"
default-features = false
features = ["std"]

[dependencies.serde_yaml]
version = "0.9.21"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
default-features = false

[dependencies.sqlx]
version = "0.7.0-alpha.3"
default-features = false
features = ["postgres", "runtime-async-std-native-tls"]