[package]
name = "weather_station_backend"
version = "0.2.2"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"

[[bin]]
name = "weather_station_backend"
path = "src/bin/main.rs"

[dependencies]
afluencia = { path = "../afluencia" }
chrono = "*"
dotenv = "*"
fern = "*"
futures = "*"
hyper = "*"
lazy_static = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
