[package]
name = "weather_station_backend"
version = "0.3.1"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"

[[bin]]
name = "weather_station_backend"
path = "src/bin/main.rs"

[dependencies]
afluencia = { path = "../afluencia" }
chrono = "*"
clap = {version = "*", features = ["yaml"]}
fern = "*"
futures = "*"
hyper = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
solnedgang = "*"
